# py-txt-trnsfrm

./: .bandit  .codecov.yml  .editorconfig  .env.example  .gitignore  .safety-project.ini  .snyk  Dockerfile  LICENSE  Makefile  Procfile  README.md  app.py  deploy.sh  docker-compose.override.yml  docker-compose.yml  gunicorn.conf.py  heroku_config.py  nginx.conf  pyproject.toml  pytest.ini  run_security_analysis.sh  sonar-project.properties  wsgi.py
.github/: copilot-instructions.md  copilot-instructions.md.backup
.github/workflows/: build.yml  ci.yml  performance.yml  poc-security-workflow.yml  release.yml  security-nightly.yml  test-legacy.yml  test.yml
app/: __init__.py  config.py  env_config.py  logging_config.py  middleware.py
app/main/: __init__.py  routes.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  index.html
app/utils/: __init__.py  text_transformers.py  version.py
docs/: CI_CD_PIPELINE.md  MAKEFILE.md  UV_TROUBLESHOOTING.md
docs/security/: LOCAL_SCANNING_GUIDE.md  README.md  SECURITY_TOOLING_EVALUATION.md  poc_security_analysis.sh  semgrep-rules.yaml
issues/: 31.md
tests/: __init__.py  conftest.py  security_utils.py  test_api_enhanced.py  test_app.py  test_app_factory.py  test_config.py  test_deploy_script.py  test_docker_compose.py  test_dotenv.py  test_env_config.py  test_google_style_guide.py  test_gunicorn_config.py  test_host_binding.py  test_integration_workflows.py  test_logging_config.py  test_makefile.py  test_middleware.py  test_performance_enhanced.py  test_routes.py  test_secure_random.py  test_security.py  test_transformers.py  test_uv_sync.py  test_version.py
tests/data/: test_data.py
tests/performance/: test_api_performance.py
