[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-txt-trnsfrm"
version = "0.1.0"
description = "A Flask web application for creative text transformations inspired by 90s internet culture"
authors = [
    {name = "Amir Masri", email = "masriamir@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Framework :: Flask",
]
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "python-dotenv==1.1.1",
    "werkzeug>=3.1.3",
]

[dependency-groups]
# Development tools for code formatting, linting, and type checking
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

# Testing framework and related plugins
test = [
    "pytest>=8.4.1",
    "pytest-flask>=1.3.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "coverage>=7.3.0",
    # Test data generation and property-based testing
    "faker>=37.5.3",
    "hypothesis>=6.137.1",
    "pytest-datadir>=1.8.0",
    "pytest-httpserver>=1.1.3",
    "responses>=0.25.8",
    "pytest-benchmark>=5.1.0",
]

# Security analysis and vulnerability scanning
security = [
    "bandit>=1.8.6",
    "safety>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/masriamir/py-txt-trnsfrm"
Repository = "https://github.com/masriamir/py-txt-trnsfrm"

[project.scripts]
py-txt-trnsfrm = "app:main"

# Configure hatchling to include the app package
[tool.hatch.build.targets.wheel]
packages = ["app"]

# Include additional files
[tool.hatch.build.targets.wheel.sources]
"app" = "app"
"app.py" = "app.py"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["app"]

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "S", "B", "A", "C4", "T20"]
ignore = ["E501"]  # Line too long (handled by black)

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S607", "T201"]  # Allow assert statements, subprocess calls, and print statements in tests

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "venv/*", ".venv/*"]
data_file = "reports/coverage/.coverage"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.uv.pip]
python-version = "3.13"
